--- a/sledeca-stranica.html
+++ b/sledeca-stranica.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="back-button"> <img src="assets/arrow-left-solid 1.svg" alt="strelica"></button>
+        <button class="back-button"><a href="index.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a></button>
         <h2>Alfa raspad (Sunce)</h2>
         <p class="fact">
             Crveni div:<br>
