--- a/antares2.html
+++ b/antares2.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="back-button"> <img src="assets/arrow-left-solid 1.svg" alt="strelica"></button>
+        <button class="back-button"><a href="index7.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a></button>
         <h2>Bještačke transmutacije</h2>
         <p class="fact">
             Crveni superdžin:<br>
