--- a/rigel3.html
+++ b/rigel3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="back-button"> <img src="assets/arrow-left-solid 1.svg" alt="strelica"></button>
+        <button class="back-button"><a href="index6.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a></button>
         <h2>Nuklearna fuzija</h2>
         <p class="fact">
             Supernova i crna rupa:<br>
