--- a/sirius3.html
+++ b/sirius3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="back-button"> <img src="assets/arrow-left-solid 1.svg" alt="strelica"></button>
+        <button class="back-button"><a href="index1.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a></button>
         <h2>Beta plus raspad</h2>
         <p class="fact">
             Bijeli patuljak:<br>
