--- a/index.html
+++ b/index.html
@@ -1,85 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Galaktički Put</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Glavna</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="galaxy-background">
-    <div class="galaxy-path">
-
-        <div class="stage-row left">
-            <div class="stage-group">
-              <div class="stage active">
-                <img src="assets/Sunce - 1. stage.svg" alt="Sunce" />
-              </div>
-              <a href="nebula.html" class="start-button">Kreni</a>
-            </div>
-          </div>
-          
-
-      <div class="connector"></div>
-
-      <div class="stage-row right">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
+        <img class="sunce" src="assets/Sunce - 2. stage.svg" alt="sunce">
+        <img class="rigel" src="assets/Rigel- 2. stage.svg" alt="rigel">
+        <img class="polaris" src="assets/Polaris 2 stage.svg" alt="polaris">
+        <img class="antares" src="assets/Antarese- 1. stage.svg" alt="anatres">
+    <div class="container">
+        <img src="assets/atom-svgrepo-com 1.svg" alt="logo">
+        <h1>Atomica</h1>
+        <p>Dobrodošli u Atomicu - vašu interaktivnu učionicu nuklearne fizike.Otkrijte svet atoma, radioaktivnosti i nuklearnih reakcija kroz pregledne lekcije, vizualizacije i kvizove. Atomica je osmišljena da učenje nuklearne fizike učini jasnim, zanimljivim i dostupnim svima - bilo da ste učenik, student ili zaljubljenik u nauku.</p>
+        <div class="dugme">
+            <a href="index0.html">Započni</a>
         </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row left">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row right">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row left">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row right">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row left">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
-      <div class="connector"></div>
-
-      <div class="stage-row right">
-        <div class="stage locked">
-          <img src="assets/lock-svgrepo-com 1.svg" alt="Zaključano" />
-        </div>
-      </div>
-
     </div>
-  </div>
 </body>
 </html>
