--- a/nebula.html
+++ b/nebula.html
@@ -13,7 +13,7 @@
 <body>
     <h1 class="nivo">Nivo 1</h1>
     <button id="transition-btn" data-next-page="alfa.html">
-        <img src="assets/Sunce - 1. stage.png" alt="Sunce">
+        <img src="assets/Sunce - 1. stage.svg" alt="Sunce">
     </button>
     <h1>Sunčeva nebula</h1>
 
