--- a/alfa.html
+++ b/alfa.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <button class="back-button">
-      <a href="index.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a>
+      <a href="index0.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a>
     </button>
     <h2>Alfa raspad (Sunce)</h2>
     <p class="fact">
