--- a/antares2.html
+++ b/antares2.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <button class="back-button"><a href="index7.html"><img src="assets/arrow-left-solid 1.svg" alt="strelica" /></a></button>
-        <h2>Bještačke transmutacije</h2>
+        <h2>Vještačke transmutacije</h2>
         <p class="fact">
             Crveni superdžin:<br>
             Trenutno se nalazi u ovoj fazi, sa ogromnim prečnikom i veoma niskom gustinom na površini. Njegova veličina je toliko velika da bi, da se nalazi umjesto Sunca, "progutala" unutrašnje planete. Iako izgleda mirno, unutra se odvijaju složeni fuzijski procesi.
