--- a/index5.html
+++ b/index5.html
@@ -68,7 +68,7 @@
           <div class="stage active">
             <img src="assets/Proxima centauri.svg" alt="Proxima" />
           </div>
-          <a href="#" class="start-button">Kreni</a>
+          <a href="proxima.html" class="start-button">Kreni</a>
         </div>
       </div>
 
