--- a/rigel3.html
+++ b/rigel3.html
@@ -30,7 +30,7 @@
             <span>+ </span>
             <div class="element-box">
                 <input type="text" class="input-box" id="inputRn" maxlength="1" placeholder="?">
-                <span class="element">He</span>
+                <span class="element">H</span>
                 <input type="text" class="input-box" id="inputRa" maxlength="1" placeholder="?">
             </div>
         
