--- a/sirius.html
+++ b/sirius.html
@@ -30,7 +30,7 @@
                 <span class="element">Ne</span>
                 <input type="text" class="input-box" id="inputRa" maxlength="2" placeholder="?">
             </div>
-            <span>+ <sup>0</sup><sub>+1</sub>α</span>
+            <span>+ <sup>0</sup><sub>+1</sub>e</span>
             <span>+ <sup>0</sup><sub>0</sub>ve</span>
         </div>
         <button class="check-button" id="checkBtn" disabled>Provjeri</button>
