--- a/vega2.html
+++ b/vega2.html
@@ -28,7 +28,7 @@
             <span>→</span>
             <div class="element-box">
                 <span class="number">3</span>
-                <span class="element">He*</span>
+                <span class="element">*He</span>
                 <span class="number">2</span>
             </div>
             <span>+ <sup>0</sup><sub>0</sub>γ</span>
